--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webdrivercss",
-  "version": "2.1.0beta-rc1",
+  "version": "2.1.1-beta",
   "description": "Regression testing tool for WebdriverJS",
   "author": "Christian Bromann <mail@christian-bromann.com>",
   "license": "MIT",
